--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Fregg</title>
+  <title>.:Jorge R@ncaño:.</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -42,7 +42,7 @@
           <a class="navbar-brand mr-5" href="index.html">
             <img src="images/logo.png" alt="">
             <span>
-              Fregg
+              Sistemas TI..
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -89,14 +89,14 @@
                   <div class="detail-box">
                     <div>
                       <h1>
-                        Welcome To <br>
+                        Jorge Rancaño.. <br>
                         <span>
                           Content Writing Services
                         </span>
                       </h1>
                       <p>
-                        It is a long established fact that a reader will be distracted by the readable content of a page
-                        when looking
+                        Version de prueba AZURE... 
+                        Loading... Support TI 
                       </p>
                       <div class="btn-box">
                         <a href="" class="btn-1">
